pi: added temp to output email

--- a/email_template.html
+++ b/email_template.html
@@ -11,7 +11,8 @@ code {
 <h3>{{ .Timestamp }}</h3>
 <hr>
 <b>Total backups: {{ .Totalbackups }}<br>
-<b>Total backup with success: {{ .Totalbackupsuccess }}
+<b>Total backup with success: {{ .Totalbackupsuccess }}<br>
+<b>Pi Temp: {{ .PiTemp }}
 <hr>
 
 <code>
